[a59890921af67137b44e6f972f8f52afa1f84179]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -5906,7 +5906,7 @@ PaymentIds associated with the identifier.</p>
 
 <p>It is possible to carry out both the total capture and the partial capture via The Backoffice Cielo.</p>
 
-<p>Access our <a href="https://developercielo.github.io/Tutorial//Backoffice-3.0"><strong>Tutorial</strong></a>  for more informations</p>
+<p>Access our [<strong>Tutorial</strong>]https://developercielo.github.io/en/tutorial/tutoriais-3-0)  for more informations</p>
 
 <h2 id="canceling-a-sale">Canceling a sale</h2>
 
@@ -6265,24 +6265,18 @@ PaymentIds associated with the identifier.</p>
 <p>Cancellation via Backoffice is the only option to perform cancellation of bank slip and Online Debit transactions.
 It is possible to carry out both the total cancellation and the partial cancellation via The Backoffice Cielo.</p>
 
-<p>Effects on the means of payment</p>
+<p>Effects on the payment method</p>
 
 <table>
   <thead>
     <tr>
-      <th>Means of payment</th>
+      <th>Payment method</th>
       <th>Description</th>
       <th>Deadline</th>
       <th>Cielo participation</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td>Bank slip</td>
-      <td>Cancellation only in API. The return of the value is made by the merchant himself</td>
-      <td>Defined by the merchant</td>
-      <td>No</td>
-    </tr>
     <tr>
       <td>Electronic Transfer</td>
       <td>Cancellation only in API. The return of the value is made by the merchant himself</td>
@@ -6292,7 +6286,7 @@ It is possible to carry out both the total cancellation and the partial cancella
   </tbody>
 </table>
 
-<p>Access our <a href="https://developercielo.github.io/Tutorial//Backoffice-3.0"><strong>Tutorial</strong></a>  for more informations</p>
+<p>Access our <a href="https://developercielo.github.io/en/tutorial/tutoriais-3-0"><strong>Tutorial</strong></a>  for more informations</p>
 
 <h2 id="notification-post">Notification Post</h2>
 
