[2f12be6ad59be0aed51fc366f69bfef61ef450da]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -5906,7 +5906,7 @@ PaymentIds associated with the identifier.</p>
 
 <p>It is possible to carry out both the total capture and the partial capture via The Backoffice Cielo.</p>
 
-<p>Access our [<strong>Tutorial</strong>]https://developercielo.github.io/en/tutorial/tutoriais-3-0)  for more informations</p>
+<p>Access our <a href="https://developercielo.github.io/en/tutorial/tutoriais-3-0"><strong>Tutorial</strong></a>  for more informations</p>
 
 <h2 id="canceling-a-sale">Canceling a sale</h2>
 
