[70170b58331d15b9b5d02c1c28d846f6c7a8447d]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -5193,7 +5193,7 @@ PaymentIds associated with the identifier.</p>
 
 <p>To consult a credit card Recurrence, it is necessary to do a <code class="highlighter-rouge">GET</code> as shown in the example.</p>
 
-<p>**The Recurrence Query brings data about the scheduling and transaction process that are repeated. They do not return data about transactions itself. To do this, a <code class="highlighter-rouge">GET</code> must be performed in the transaction (Available in” Consulting sales</p>
+<p><strong>The Recurrence Query brings data about the scheduling and transaction process that are repeated. They do not return data about transactions itself. To do this, a <code class="highlighter-rouge">GET</code> must be performed in the transaction (Available in” Consulting sales)</strong></p>
 
 <h4 id="request-11">Request</h4>
 
