--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -5224,7 +5224,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
 
 <p>Para consultar uma Recorrência de cartão de crédito, é necessário fazer um <code class="highlighter-rouge">GET</code>  conforme o exemplo.</p>
 
-<p><strong>A Consulta da Recorrência tras dados sobre o agendamento e sobre o processo de transações que se repetem. Elas não retornam dados sobre as transações em si. Para isso, deve ser realizado um <code class="highlighter-rouge">GET</code> na transação (Disponivel em “Consultanto vendas</strong></p>
+<p><strong>A Consulta da Recorrência tras dados sobre o agendamento e sobre o processo de transações que se repetem. Elas não retornam dados sobre as transações em si. Para isso, deve ser realizado um <code class="highlighter-rouge">GET</code> na transação (Disponivel em “Consultanto vendas)</strong></p>
 
 <h4 id="requisição-11">Requisição</h4>
 
