[9fb632f5669b80eaba9df59fa479de2ef4525b5c]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -6423,7 +6423,7 @@ It is possible to carry out both the total cancellation and the partial cancella
   </thead>
   <tbody>
     <tr>
-      <td>Disabled where reaching maximum number of attempts (transactions denied)</td>
+      <td>Disabled when reaching maximum number of attempts (transactions denied)</td>
     </tr>
     <tr>
       <td>Rehabilitation</td>
