[17712ccd95a739bbaec10345bb05d3c88430b9b7]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -6372,7 +6372,7 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h3 id="about-the-post">About the POST</h3>
 
-<p>The Cielo e-commerce API offers a transactional notification system where the Merchant provides an endpoint that will receive a notification via ‘POST’.</p>
+<p>The Cielo e-commerce API offers a transactional notification system where the Merchant provides an endpoint that will receive a notification via ‘POST’</p>
 
 <p>The notification content will be formed by 3 fields:</p>
 
