[48970031ff99ab44ef017f11514ca77c2104aa7c]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -6559,7 +6559,7 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h2 id="creating-a-sale-with-external-authentication">Creating a sale with external authentication</h2>
 
-<p>To create a credit or debit card sale containing external authentication data, you must send a request using the ‘POST’ method for the Payment feature as the example.</p>
+<p>To create a credit or debit card sale containing external authentication data, you must send a request using the <code class="highlighter-rouge">POST</code> method for the Payment feature as the example.</p>
 
 <h3 id="request-14">Request</h3>
 
