--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -6983,11 +6983,11 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h2 id="what-is-velocity">What is Velocity</h2>
 
-<p>Velocity is a type of fraud prevention mechanism that specifically analyzes the concept of **“speed x transactional data” **. It analyzes how often certain data is used and whether that data is inscribed in a list of behaviors succeptible to security actions.</p>
+<p>Velocity is a type of fraud prevention mechanism that specifically analyzes the concept of <strong>“speed x transactional data”</strong>. It analyzes how often certain data is used and whether that data is inscribed in a list of behaviors succeptible to security actions.</p>
 
 <p>For merchants operating in the e-commerce market and eventually receiving fraudulent transactions, Velocity is a product that will identify behaviors suspect of fraud. The tool is intended to assist in fraud analysis at a much lower cost than a more traditional market tool.</p>
 
-<p>It is an ally in the evaluation of suspect buying behaviors because the calculations will be based on <code class="highlighter-rouge">traceability elements</code>.</p>
+<p>It is an ally in the evaluation of suspect buying behaviors, because the calculations will be based on <code class="highlighter-rouge">traceability elements</code>.</p>
 
 <p>The Velocity offers 4 types of functionalities to validate transactional data:</p>
 
@@ -7001,7 +7001,7 @@ It is possible to carry out both the total cancellation and the partial cancella
   <tbody>
     <tr>
       <td>Velocity safety rules</td>
-      <td>The Merchantdefines a set of security rules that will evaluate if certain transactional data is repeated in a suspicious time interval</td>
+      <td>The Merchant defines a set of security rules that will evaluate if certain transactional data is repeated in a suspicious time interval</td>
     </tr>
     <tr>
       <td>Quarantine</td>
