[9282abc934195448cad2fa5c64d3f8d84c4349ae]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -6991,6 +6991,10 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h3 id="status-do-af">Status do AF</h3>
 
+<blockquote>
+  <p>The status below are displayed in the Backoffice of the Cielo E-Commerce API, inside the Cielo website</p>
+</blockquote>
+
 <table>
   <thead>
     <tr>
