--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -7501,6 +7501,78 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h4 id="fraudanalysisreasoncode">FraudAnalysisReasonCode</h4>
 
+<table>
+  <thead>
+    <tr>
+      <th>Type</th>
+      <th>Description</th>
+      <th> </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">100</code></td>
+      <td>Operation successful.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">101</code></td>
+      <td>The request is missing one or more required fields. Possible action: See the missing fields in the AntiFraudResponse.MissingFieldCollection list. Resend the request with the complete information.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">102</code></td>
+      <td>One or more of the fields in the request contain invalid data. Possible action: View the invalid fields in the AntiFraudResponse.InvalidFieldCollection list. Resend the order with the correct information.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">150</code></td>
+      <td>General system failure. Possible action: Wait a few minutes and try resending the request.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">151</code></td>
+      <td>The request was received, but a time-out occurred on the server. This error does not include time-out between the client and the server. Possible action: Wait a few minutes and try resending the request.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">152</code></td>
+      <td>The request was received, but a time-out occurred. Possible action: Wait a few minutes and resubmit the request.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">202</code></td>
+      <td>Fraud Prevention declined the request because the card has expired. You can also receive this code if the expiry date does not match the date on file of the issuing bank. If the payment processor allows you to issue credits to expired cards, CyberSource does not allow this functionality. Possible action: Request a card or other form of payment.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">231</code></td>
+      <td>The account number is invalid. Possible action: Request a card or other payment method.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">234</code></td>
+      <td>There is a problem with the merchant configuration. Possible action: Do not send the request. Get in touch with the Customer Support to correct the configuration problem.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">400</code></td>
+      <td>The fraud rate exceeds its limit. Possible action: Review the customer’s request.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">480</code></td>
+      <td>The request has been marked for review by the Decision Manager.</td>
+      <td> </td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">481</code></td>
+      <td>The request was rejected by the Decision Manager.</td>
+      <td> </td>
+    </tr>
+  </tbody>
+</table>
+
 <h4 id="factorcode">FactorCode</h4>
 
 <h2 id="device-fingerprint">Device FingerPrint</h2>
