[893201db686ca5b799b5f0d5d787a9978fcab10e]: Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -7575,6 +7575,93 @@ It is possible to carry out both the total cancellation and the partial cancella
 
 <h4 id="factorcode">FactorCode</h4>
 
+<table>
+  <thead>
+    <tr>
+      <th>Type</th>
+      <th>Description</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><code class="highlighter-rouge">A</code></td>
+      <td>Excessive address change. The customer has changed the billing address two or more times in the last six months.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">B</code></td>
+      <td>BIN of the card or risk authorization. Risk factors are related to credit card BIN and / or card authorization checks.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">C</code></td>
+      <td>Elevated credit card numbers. The customer has used more than six credit card numbers in the last six months.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">D</code></td>
+      <td>Impact of email address. The customer uses a free email provider or the email address is risky.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">E</code></td>
+      <td>Positive list. The customer is on your positive list.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">F</code></td>
+      <td>Negative list. The account number, address, e-mail, or IP address for this purpose appears on your negative list.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">G</code></td>
+      <td>Geolocation inconsistencies. The email client’s domain, phone number, billing address, shipping address, or IP address is suspect.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">H</code></td>
+      <td>Excessive name changes. The customer has changed the name two or more times in the last six months.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">I</code></td>
+      <td>Internet inconsistencies. The IP address and email domain are not consistent with the billing address.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">N</code></td>
+      <td>Meaningless entrance. The client name and the address fields contain nonsense words or language.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">O</code></td>
+      <td>Obscenities. Customer data contains obscene words.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">P</code></td>
+      <td>Morphing identity. Multiple values ​​of an identity element are linked to a value of a different identity element. For example, multiple phone numbers are linked to a single account number.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Q</code></td>
+      <td>Phone inconsistencies. The customer’s phone number is suspect.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">R</code></td>
+      <td>Risky order. The transaction, the customer, and the merchant show correlated risk information.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">T</code></td>
+      <td>Coverage Time. The customer is attempting an order outside of the expected time.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">U</code></td>
+      <td>Unverifiable address. The billing or delivery address can not be verified.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">V</code></td>
+      <td>Velocity. The account number has been used many times in the last 15 minutes.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">W</code></td>
+      <td>Marked as suspect. The billing or delivery address is similar to an address previously marked as suspicious.</td>
+    </tr>
+    <tr>
+      <td><code class="highlighter-rouge">Z</code></td>
+      <td>Invalid value. The request contains an unexpected value, a default value has been replaced. Although the transaction can still be processed, examine the request carefully for any anomalies.</td>
+    </tr>
+  </tbody>
+</table>
+
 <h2 id="device-fingerprint">Device FingerPrint</h2>
 
 <h3 id="what-is-dfingerprint">What is D.FingerPrint</h3>
