[a22e63dddc1f0a3b97d90cc42dfec36be5454e6e]: Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -7049,7 +7049,7 @@ Este processo de autenticação pode ser feito junto ou separado da autorizaçã
 
 <h1 id="análise-de-fraude-af">Análise de Fraude (AF)</h1>
 
-<p>A API Cielo e-commerce Cielo oferece um serviço de analise de risco de fraudes em transações online. A Cielo se integra a empresas de analise de risco, como CyberSource, que realizam uma validação dos dados transacionais e do historico de compras do portador do cartão.
+<p>A API e-commerce Cielo oferece um serviço de analise de risco de fraudes em transações online. A Cielo se integra a empresas de analise de risco, como CyberSource, que realizam uma validação dos dados transacionais e do historico de compras do portador do cartão.
 Essa analise retorna fatores de risco e permite que o lojista tome a decisão se dará continuidade a venda.</p>
 
 <aside class="warning">A análise de fraude oferecida pela Cielo avalia o risco de uma transação, mas não vincula o resultado da analise com a cobertura de ChargeBacks. A Cielo não realiza transações "garantidas"</aside>
